<resources>
    <string name="app_name">Job Finder Malawi</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="account">Account</string>
    <string name="support">Support</string>
    <string name="notifications">Notifications</string>
    <string name="user">User</string>
    <string name="search_for_a_job_position">Search for a job position...</string>
    <string name="search">Search</string>
    <string name="enter_search_term">Enter search term</string>
    <string name="software_developer">Software Developer</string>
    <string name="airtel_malawi_plc">Airtel Malawi PLC</string>
    <string name="welcome_job_seeker">Welcome Job Seeker</string>
    <string name="start">We are happy to see you here, let’s explore new dream jobs for your career</string>
    <string name="start_exploring_jobs">Start Exploring Jobs</string>
    <string name="illustration">illustration</string>
    <string name="welcome_back_login_to_get_started">Welcome back, login to get started</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account_register">Do not have an account? Register</string>
    <string name="search_by_job_position_or_title">Search by job position or title</string>
    <string name="explore_by_category">Explore By Category</string>
    <string name="location">Location</string>
    <string name="blantyre_city">Blantyre City</string>
    <string name="icon">icon</string>
    <string name="human_resource_management">Human Resource Management</string>
    <string name="recently_posted_jobs">Recently posted</string>
    <string name="see_more">See more</string>
    <string name="full_time">Full Time</string>
    <string name="lilongwe">Lilongwe</string>
    <string name="unspecified">Unspecified</string>
    <string name="applications_are_invited_from_highly_qualified_self_motivated_and_experienced_candidates_to_fill_the_following_vacant_position_at_castel_malawi">Applications are invited from highly qualified, self-motivated, and experienced candidates to fill the following vacant position at Castel Malawi</string>
    <string name="kelvin_chidothi">Kelvin Chidothi</string>
    <string name="kchidothi_outlook_com">kchidothi@outlook.com</string>
</resources>