<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="20dp"
    android:background="@drawable/rounded_stroke"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/companyLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:src="@drawable/airtel"
                android:contentDescription="@string/icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="76dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                app:layout_constraintStart_toEndOf="@+id/companyLogo"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/jobPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/software_developer"
                    android:textAllCaps="true"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/companyName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/airtel_malawi_plc"
                    android:textSize="14sp" />
            </LinearLayout>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:src="@drawable/bookmark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:contentDescription="@string/icon" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="3"
            android:padding="10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/location"
                    android:contentDescription="@string/icon"
                    app:tint="@color/grey" />
                <TextView
                    android:id="@+id/jobLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lilongwe"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/briefcase"
                    android:contentDescription="@string/icon"
                    app:tint="@color/grey" />
                <TextView
                    android:id="@+id/jobDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/full_time"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                >
                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/briefcase"
                    android:contentDescription="@string/icon"
                    app:tint="@color/grey" />
                <TextView
                    android:id="@+id/jobSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/unspecified"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/jobDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/applications_are_invited_from_highly_qualified_self_motivated_and_experienced_candidates_to_fill_the_following_vacant_position_at_castel_malawi"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>